# elephant_transfer_learning

./: 1_feature_extraction_notebook.ipynb  2_call_types_notebook.ipynb  3_behaviour_demography_notebook.ipynb  README.md  elephant_contextual_observations.csv  elephant_vocalisations.csv  pyproject.toml  requirements.txt
elephant_scripts/: behaviour_stats.py  feature_extraction.py  load_data.py  load_data_behaviour.py  models.py  plotting.py  silhouette_score.py  types.py  umap_projections.py  umap_projections_behaviour.py
outputs/: vggish_vocalisation_features.parquet  yamnet_vocalisation_features.parquet
