[project]
name = "elephant-analysis-repository-submission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn==0.12.3",
    "kaleido==0.2.0",
    "librosa==0.10.2",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy<2",
    "plotly>=5.24.1",
    "pyarrow>=18.1.0",
    "scikit-learn==1.5.2",
    "scipy==1.14.0",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "statsmodels==0.14.0",
    "tabulate>=0.9.0",
    "tensorflow>=2.18.0",
    "tensorflow-hub>=0.16.1",
    "tqdm>=4.67.1",
    "umap-learn==0.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.391",
    "ruff>=0.9.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
verboseOutput = true
pythonVersion = "3.12"
pythonPlatform = "All"
